--- a/5_gene_set_enrichment_analysis_with_gseapy.ipynb
+++ b/5_gene_set_enrichment_analysis_with_gseapy.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# GSEApy: Gene Set Enrichment Analysis in Python\n",
@@ -669,7 +669,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
