--- a/6_sequence_analysis_with_biopython.ipynb
+++ b/6_sequence_analysis_with_biopython.ipynb
@@ -766,7 +766,8 @@
     "## <a name=\"ex1\"></a>Exercise 1\n",
     "\n",
     "- The file `input/dna_sequences.fasta` contains further DNA sequences.\n",
-    "- Analyze some of these sequences with the techniques presented today."
+    "- Analyze some of these sequences with the techniques presented today.\n",
+    "- Repeat this with your favourite FASTA file (if you have any)."
    ]
   },
   {
